# router/app.go
@@ -23,6 +23,7 @@ func Router() *gin.Engine {
 	r.GET("/user-detail", service.GetUserDetail)
 	r.POST("/login", service.Login)
 	r.POST("/send-code", service.SendCode)
+	r.POST("/register", service.Register)
 
 	// submit
 	r.GET("/submit-list", service.GetSubmitList)
