# service/user.go
@@ -6,6 +6,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 	"net/http"
+	"time"
 )
 
 // GetUserDetail
@@ -94,7 +95,7 @@ func Login(c *gin.Context) {
 // SendCode
 // @Tags 公共方法
 // @Summary 发送验证码
-// @Param email formData string false "email"
+// @Param email formData string true "email"
 // @Success 200 {string} json "{"code":"200","msg":""}"
 // @Router /send-code [post]
 func SendCode(c *gin.Context) {
@@ -107,6 +108,7 @@ func SendCode(c *gin.Context) {
 		return
 	}
 	code := helper.GetRandomCode()
+	models.RDB.Set(c, email, code, 5*time.Minute)
 	err := helper.SendCode(email, code)
 	if err != nil {
 		c.JSON(http.StatusOK, gin.H{
@@ -119,6 +121,96 @@ func SendCode(c *gin.Context) {
 		"code": 200,
 		"data": map[string]interface{}{
 			"code": code,
+		},
+	})
+}
+
+// Register
+// @Tags 公共方法
+// @Summary 用户注册
+// @Param email formData string true "email"
+// @Param code formData string true "code"
+// @Param username formData string true "username"
+// @Param password formData string true "password"
+// @Param phone formData string false "phone"
+// @Success 200 {string} json "{"code":"200","msg":""}"
+// @Router /register [post]
+func Register(c *gin.Context) {
+	email := c.PostForm("email")
+	userCode := c.PostForm("code")
+	username := c.PostForm("username")
+	password := c.PostForm("password")
+	phone := c.PostForm("phone")
+
+	if email == "" || userCode == "" || username == "" || password == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "email or userCode or username or password is empty",
+		})
+		return
+	}
+
+	// judge email is or not exist
+	var count int64
+	models.DB.Model(&models.UserBasic{}).Where("email = ?", email).Count(&count)
+	if count > 0 {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "email is exist",
+		})
+		return
+	}
+
+	// check code
+	sysCode, err := models.RDB.Get(c, email).Result()
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "get code error: " + err.Error(),
+		})
+		return
+	}
+	if sysCode != userCode {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "code is error",
+		})
+		return
+	}
+
+	// insert data
+	data := &models.UserBasic{
+		Identity: helper.GetUUID(),
+		Username: username,
+		Password: helper.GetMd5(password),
+		Email:    email,
+		Phone:    phone,
+	}
+	err = models.DB.Create(&data).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "register error: " + err.Error(),
+		})
+		return
+	}
+
+	// generate token
+	token, err := helper.GenerateToken(data.Identity, data.Username)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "generate token error: " + err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"identity": data.Identity,
+			"username": data.Username,
+			"token":    token,
 		},
 	})
 }
